updated dashboard.py and requirements.txt

--- a/Frontend/requirements.txt
+++ b/Frontend/requirements.txt
@@ -1,8 +1,7 @@
 streamlit
 pandas
-git+https://github.com/stefanrmmr/streamlit_audio_recorder.git
-openai-whisper
+whisper
 torch
-requests
+streamlit-audiorecorder
 fastapi
 uvicorn
