--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,7 @@
 services:
+  # Backend FastAPI
   - type: web
-    name: OperationSmokeyBear_DSPilots
+    name: operation-backend
     env: python
     plan: free
     rootDir: Backend
@@ -8,3 +9,14 @@ services:
       apt-get update && apt-get install -y ffmpeg
       pip install -r requirements.txt
     startCommand: uvicorn server:app --host 0.0.0.0 --port $PORT
+
+  # Frontend Streamlit
+  - type: web
+    name: operation-frontend
+    env: python
+    plan: free
+    rootDir: Frontend
+    buildCommand: |
+      apt-get update && apt-get install -y ffmpeg
+      pip install -r requirements.txt
+    startCommand: streamlit run dashboard.py --server.port $PORT --server.address 0.0.0.0
