--- a/render.yaml
+++ b/render.yaml
@@ -1,22 +1,12 @@
 services:
-  # Backend FastAPI
   - type: web
-    name: operation-backend
+    name: smokeybear-frontend
     env: python
-    plan: free
-    rootDir: Backend
-    buildCommand: |
-      apt-get update && apt-get install -y ffmpeg
-      pip install -r requirements.txt
-    startCommand: uvicorn server:app --host 0.0.0.0 --port $PORT
-
-  # Frontend Streamlit
-  - type: web
-    name: operation-frontend
-    env: python
-    plan: free
     rootDir: Frontend
-    buildCommand: |
-      apt-get update && apt-get install -y ffmpeg
-      pip install -r requirements.txt
+    buildCommand: pip install -r requirements.txt
     startCommand: streamlit run dashboard.py --server.port $PORT --server.address 0.0.0.0
+    envVars:
+      - key: PYTHONUNBUFFERED
+        value: "1"
+    packages:
+      - ffmpeg
