--- a/Frontend/requirements.txt
+++ b/Frontend/requirements.txt
@@ -3,10 +3,8 @@ pandas
 streamlit-mic-recorder
 numpy<=2.2
 numba
-fastapi
-uvicorn
 python-dotenv
 requests
 python-multipart
-openai-whisper
 ffmpeg-python
+git+https://github.com/openai/whisper.git
